Added background svgs

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@
 $color-primary-Dark-cyan: hsl(185, 75%, 39%);
 $color-primary-very-Dark-desaturated-blue: hsl(229, 23%, 23%);
 $color-primary-Dark-grayish-blue: hsl(227, 10%, 46%);
+$color-primary-white: hsl(0, 0%, 100%);
 
 /////////////////////////////////////////
 // NEUTRAL COLORS
