--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,29 @@ body {
   font-weight: 400;
   line-height: 1.4;
 }
+
+.card {
+  background: white;
+  width: 30%;
+}
+
+.card__social {
+  font-size: 1.8rem;
+  line-height: 1.1;
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  background: url(/images/bg-pattern-top.svg) top -15rem left 5rem, url(/images/bg-pattern-top.svg) bottom -10rem right -3rem;
+  background-size: cover;
+}
 /*# sourceMappingURL=main.css.map */
