--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,7 +4,8 @@
   align-items: center;
   height: 100vh;
 
-  background: url(/images/bg-pattern-top.svg) top -15rem left 5rem,
-    url(/images/bg-pattern-top.svg) bottom -10rem right -3rem;
-  background-size: cover;
+  background: url(/images/bg-pattern-top.svg) top -25rem left -10rem no-repeat,
+    url(/images/bg-pattern-top.svg) bottom -30rem right -10rem no-repeat;
+  background-size: contain;
+  background-color: $color-primary-Dark-cyan;
 }
