--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,14 @@ body {
 .card {
   background: white;
   width: 30%;
+  position: relative;
+}
+
+.card__photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .card__social {
