--- a/css/main.css
+++ b/css/main.css
@@ -21,21 +21,100 @@ body {
 }
 
 .card {
-  background: white;
-  width: 30%;
+  background-color: white;
+  width: 35rem;
+  text-align: center;
+  border-radius: 2rem;
   position: relative;
+  overflow: hidden;
+}
+
+.card__top--bg {
+  background: url(/images/bg-pattern-card.svg) no-repeat;
+  background-size: cover;
+  height: 15rem;
+}
+
+.card__description {
+  padding: 0 2rem 0.5rem;
+}
+
+.card__image {
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  border: 0.5rem solid white;
+  overflow: hidden;
+  margin: -5rem auto 3rem auto;
 }
 
 .card__photo {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.card__social {
+.card__name {
   font-size: 1.8rem;
-  line-height: 1.1;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.card__age {
+  margin-left: 0.3rem;
+}
+
+.card__location {
+  font-size: 1.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.card__age, .card__location, .card__stats--text {
+  color: #969696;
+}
+
+.card__stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 7rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 2.5rem 1rem;
+}
+
+.card__stats--item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card__stats--count {
+  font-weight: 700;
+  font-size: 1.8rem;
+  letter-spacing: 0.01rem;
+}
+
+.card__stats--text {
+  font-size: 1.2rem;
+  margin-top: -1.2rem;
+  letter-spacing: 0.09rem;
 }
 
 .main {
