--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,9 +5,9 @@
   width: 100%;
   height: 100vh;
 
-  background: url(/images/bg-pattern-top.svg) top -25rem left -10rem no-repeat,
-    url(/images/bg-pattern-top.svg) bottom -35rem right -7rem no-repeat;
-  background-size: contain;
+  background: url(/images/bg-pattern-top.svg) top -25rem left -8rem no-repeat,
+    url(/images/bg-pattern-bottom.svg) bottom -30rem right -8rem no-repeat;
+  background-size: contain, contain;
   background-color: $color-primary-Dark-cyan;
 }
 
